--- a/app.yaml
+++ b/app.yaml
@@ -14,9 +14,9 @@ handlers:
   static_dir: static
 
 # Endpoints placeholder
-- url: /_ah/spi.*
+- url: /_ah/spi/.*
   script: api.app
-  
+
 #Main handler
 - url: .*
   script: main.app
@@ -26,8 +26,8 @@ libraries:
   version: "2.5.2"
 - name: jinja2
   version: "2.6"
-# - name: pycrypto
-#  version: "2.6"
+- name: pycrypto
+  version: "2.6"
 # Endpoints library
 - name: endpoints
   version: latest
